# talken-ts-aos

./: README.md
TrustSigner/: build.gradle  settings.gradle
TrustSigner/app/: CMakeLists.txt  build.gradle
TrustSigner/app/prebuilt_libs/include/boost/asio/detail/impl/: handler_tracking.ipp
TrustSigner/app/prebuilt_libs/include/boost/graph/: read_dimacs.hpp
TrustSigner/app/prebuilt_libs/include/boost/multiprecision/: float128.hpp
TrustSigner/app/prebuilt_libs/include/boost/wave/util/: cpp_macromap_predef.hpp
TrustSigner/app/src/main/: AndroidManifest.xml
TrustSigner/app/src/main/cpp/: Makefile.test  coin.c  test_main.c  trustsigner.cpp  whitebox.cpp
TrustSigner/app/src/main/cpp/bip32_bip39/: bip32.c  bip32_bip39.c  bip32_bip39.h  options.h
TrustSigner/app/src/main/cpp/ed25519/: sha512.c
TrustSigner/app/src/main/cpp/include/: base64.h  coin.h  trustsigner.h  whitebox.h
TrustSigner/app/src/main/cpp/secp256k1/: libsecp256k1-config.h
TrustSigner/app/src/main/cpp/whitebox/: LinearAffineEq.cpp  WBAES.h  base.h
TrustSigner/app/src/main/java/io/talken/trustsigner/: KeyChainEncryptedPreference.java  KeyChainManager.java  SecureStorage.java  TrustSigner.java
TrustSigner/app/src/main/res/values/: strings.xml
TrustSigner/app/src/main/res/xml/: file_path.xml
TrustSigner_Sample/app/: build.gradle
TrustSigner_Sample/app/libs/: trust_signer-0.9.8-debug.aar  trust_signer-1.0.0-release.aar
TrustSigner_Sample/app/src/main/: AndroidManifest.xml
TrustSigner_Sample/app/src/main/java/io/talken/sample/trustsigner_sample/: MainActivity.java
TrustSigner_Sample/app/src/main/res/layout/: activity_main.xml
TrustSigner_Sample/app/src/main/res/values/: strings.xml
TrustSigner_Sample/gradle/wrapper/: gradle-wrapper.properties
